--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  max-width: "100vw";
+  background-image: linear-gradient(to right, #667eea, #764ba2);
 }
 
 .App-logo {
