--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   max-width: "100vw";
-  background-image: linear-gradient(to right, #667eea, #764ba2);
+  background-image: #c3c4c5;
 }
 
 .App-logo {
