--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+p {
+  text-align: start;
+  font-size: 17px;
+}
